drag and fix buttons

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	    });
     </script>
 </head>
-<body>
+<body style="-webkit-app-region: drag">
 <img class="center" src="./img/Logo_Shadow_(Blade-group).png">
 
-<button class="center" type="button">Launch</button>
-<button class="center" id="close-btn" type="button">Quit</button>
+<button class="center" type="button" style="-webkit-app-region: no-drag">Launch</button>
+<button class="center" id="close-btn" type="button" style="-webkit-app-region: no-drag">Quit</button>
 </body>
 </html>
